# emailer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs
