[package]
name = "emailer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
config = "0.14.1"
env_logger = "0.11.5"
lettre = { version = "0.11.10" }
log = { version = "0.4.22", features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
url = "2.5.3"
